[package]
name = "macro_tt_utils"
version = "0.1.9"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/macro_tt_utils.git"
homepage = "https://crates.io/crates/macro_tt_utils"
license = "MIT"
readme = "README.md"
edition = "2018"

description = "Procedural Macro Utilities"
keywords = ["tt_ident", "throw_diagnostics", "deref_span", "no_std", "clucompany"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
goto = "0.1.2"
